@@ -6,6 +6,8 @@
 		<name>Amadeusz Żołnowski</name>
 	</maintainer>
 	<use>
+		<flag name="crypt">Support decryption and verification of PGP/MIME
+			messages and in Emacs UI - encryption</flag>
 		<flag name="emacs">Install Notmuch client for Emacs (main client)</flag>
 		<flag name="vim">Install Notmuch client for Vim (experimental)</flag>
 	</use>
